# AndroidFFmpegVideoPlayer

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ffmpegvideoplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: quicsr_270p.tflite  quicsr_270p_int.tflite  quicsr_540p.tflite  quicsr_float32_epoch_200.tflite
app/src/main/cpp/: CMakeLists.txt  Streamplayer.h  ffmpegvideoplayer.cpp
app/src/main/java/com/example/ffmpegvideoplayer/: MainActivity.java
app/src/main/java/com/example/ffmpegvideoplayer/analysis/: InferenceTFLite.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ffmpegvideoplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
